 * The Global Operations tool now also allows you to raise or lower the terrain relative to the current height; in other words raise or lower it by an amount instead of to a target level
 * A Reset button has been added to the Resources layer settings tab to reset all values to their defaults
 * Bug fix: fix a crash that occurred trying to use the Pencil tool without a paint selected

-- Version 2.24.3, released 22-06-2025

 * Bug fix: removed an optimisation that broke the brushes in some circumstances

-- Version 2.24.2, released 21-06-2025

 * Panels with dynamic contents now display vertical scrollbars when their contents are taller than the display area
 * Scripts can now check for interrupts so that they can be aborted if they run too long or enter an infinite loop
   + A script can either check the wp.interrupted property to check whether it should abort (if it wishes to do clean-up), or call wp.checkForInterrupt(), which will throw an exception if it should abort, if it does not need to do any clean-up
   + Scripts that don't check for interrupts and enter an infinite loop still cannot be aborted. If a script does not respond to an abort request after ten seconds, a warning is displayed recommending to ask the author of the script to add interrupt support
 * Bug fix: the Pencil tool did not draw continuous lines in Fast Mode with brush radius 0

-- Version 2.24.1, released 05-05-2025

 * Increase performance of the Pencil tool with large brushes or long lines by adding new fast mode
   + In fast mode, the Pencil tool can only draw lines with the default circular brushes. If you have a non-circular brush selected the tool will automatically use a solid circle of the same size
   + Fast mode is the default, but you can switch to slow mode on the Tool Settings panel for the Pencil tool