@@ -11,6 +11,7 @@
  * An Undo button has been added to the Global Operations tool window. It activates when the window is kept open after an action and allow you to undo the results of that action. You may also press Ctrl+Z (or ⌘+Z on a Mac) to perform an Undo.
  * The Global Operations tool now also allows you to raise or lower the terrain relative to the current height; in other words raise or lower it by an amount instead of to a target level
  * A Reset button has been added to the Resources layer settings tab to reset all values to their defaults
+ * Sponge schem version 3 custom object files in which the data is embedded in a Schematic tag are now correctly loaded
  * Bug fix: fix a crash that occurred trying to use the Pencil tool without a paint selected
 
 -- Version 2.24.3, released 22-06-2025
